<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyBackground"
    android:overScrollMode="never">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_name"
            style="@style/fontBoldTw.GreyDoubleDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="24dp"
            android:text=" "
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_member_setting"
            style="@style/fontRegularTw.GreyDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="16dp"
            android:text="@string/member_setting"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_member_info"
            style="@style/fontRegularTw.greyDoubleDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/white"
            android:drawableStart="@drawable/ic_member"
            android:drawableEnd="@drawable/ic_arrow_right_grey"
            android:drawablePadding="10dp"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:text="@string/modify_member_info"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_member_setting" />

        <TextView
            android:id="@+id/tv_change_password"
            style="@style/fontRegularTw.greyDoubleDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:drawableStart="@drawable/ic_key"
            android:drawableEnd="@drawable/ic_arrow_right_grey"
            android:drawablePadding="10dp"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:text="@string/change_password"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_member_info" />

        <View
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/greyBackground"
            app:layout_constraintBottom_toBottomOf="@id/tv_change_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_member_info" />

        <TextView
            android:id="@+id/tv_account_info"
            style="@style/fontRegularTw.GreyDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="16dp"
            android:text="@string/account_info"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_change_password" />
        <TextView
            android:id="@+id/tv_trans_record"
            style="@style/fontRegularTw.greyDoubleDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/white"
            android:drawableStart="@drawable/ic_payhistroy"
            android:drawableEnd="@drawable/ic_arrow_right_grey"
            android:drawablePadding="10dp"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:text="@string/trans_record"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_account_info" />


        <TextView
            android:id="@+id/tv_point"
            style="@style/fontRegularTw.greyDoubleDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:drawableStart="@drawable/ic_mypoint"
            android:drawableEnd="@drawable/ic_arrow_right_grey"
            android:drawablePadding="10dp"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:text="@string/my_point"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_trans_record" />

        <TextView
            android:id="@+id/tv_coupon"
            style="@style/fontRegularTw.greyDoubleDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:drawableStart="@drawable/ic_mcoupon"
            android:drawableEnd="@drawable/ic_arrow_right_grey"
            android:drawablePadding="12dp"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:text="@string/coupon"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_point" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/greyBackground"
            app:layout_constraintBottom_toBottomOf="@id/tv_coupon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_point" />

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/greyBackground"
            app:layout_constraintBottom_toBottomOf="@id/tv_point"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_trans_record" />




<!--        <TextView-->
<!--            android:id="@+id/tv_social_center"-->
<!--            style="@style/fontDefaultTw.Grey"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="14dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:text="@string/social_center"-->
<!--            android:textSize="14sp"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/tv_coupon" />-->

<!--        <TextView-->
<!--            android:id="@+id/tv_share"-->
<!--            style="@style/fontDefaultTw.Black"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:background="@android:color/white"-->
<!--            android:drawableStart="@drawable/ic_share_black"-->
<!--            android:drawableEnd="@drawable/ic_arrow_right_grey"-->
<!--            android:drawablePadding="10dp"-->
<!--            android:paddingStart="20dp"-->
<!--            android:paddingTop="12dp"-->
<!--            android:paddingEnd="20dp"-->
<!--            android:paddingBottom="12dp"-->
<!--            android:text="@string/share_app"-->
<!--            android:textSize="14sp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/tv_social_center" />-->

        <TextView
            android:id="@+id/tv_customer_center"
            style="@style/fontRegularTw.GreyDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="16dp"
            android:text="@string/customer_center"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_coupon" />

        <TextView
            android:id="@+id/tv_contact_us"
            style="@style/fontRegularTw.greyDoubleDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/white"
            android:drawableStart="@drawable/ic_callphone"
            android:drawableEnd="@drawable/ic_arrow_right_grey"
            android:drawablePadding="10dp"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:text="@string/contact_us"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_customer_center" />

        <TextView
            android:id="@+id/tv_privacy"
            style="@style/fontRegularTw.greyDoubleDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:drawableStart="@drawable/ic_service"
            android:drawableEnd="@drawable/ic_arrow_right_grey"
            android:drawablePadding="10dp"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:text="@string/terms_of_use"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_contact_us" />

        <TextView
            android:id="@+id/tv_terms"
            style="@style/fontRegularTw.greyDoubleDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:drawableStart="@drawable/ic_paper"
            android:drawableEnd="@drawable/ic_arrow_right_grey"
            android:drawablePadding="10dp"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:text="@string/privacy_policy"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_privacy" />

        <View
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/greyBackground"
            app:layout_constraintBottom_toBottomOf="@id/tv_privacy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_contact_us" />
        <View
            android:id="@+id/view5"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/greyBackground"
            app:layout_constraintBottom_toBottomOf="@id/tv_terms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_privacy" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rec_stroke_orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_terms">

            <TextView
                style="@style/fontBoldTw.Orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="9dp"
                android:background="@null"
                android:drawableStart="@drawable/ic_logout_orange"
                android:drawablePadding="10dp"
                android:text="@string/logout"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>